set page name properly for fragments

--- a/create-dog.html
+++ b/create-dog.html
@@ -1,4 +1,4 @@
-<div data-page="all-dogs" class="page">
+<div data-page="create-dog" class="page">
   <!-- Top Navbar-->
   <div class="navbar">
     <div class="navbar-inner">
