--- a/dog.html
+++ b/dog.html
@@ -1,4 +1,4 @@
-<div data-page="all-dogs" class="page">
+<div data-page="dog" class="page">
   <!-- Top Navbar-->
   <div class="navbar">
     <div class="navbar-inner">
