add list items for left navigation, pending icons for Dogs to Walk, Dogs to Shower and Dogs out for a Walk.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div data-page="panel-left" class="page">
             <div class="navbar">
               <div class="navbar-inner">
-                <div class="center">KennelKeeper</div>
+                <div class="center">Kennel Keeper</div>
               </div>
             </div>
             <div class="page-content">
@@ -37,7 +37,7 @@
                   <li>
                     <a href="index.html" class="item-link close-panel">
                       <div class="item-content">
-                        <div class="item-media"><i class="icon icon-f7" style="-webkit-filter: hue-rotate(220deg) saturate(5);"></i></div>
+                        <div class="item-media"><i class="icon fa fa-home" style="-webkit-filter: hue-rotate(220deg) saturate(5);"></i></div>
                         <div class="item-inner">
                           <div class="item-title">Home</div>
                         </div>
@@ -47,9 +47,49 @@
                   <li>
                     <a href="all-dogs.html" class="item-link close-panel">
                       <div class="item-content">
-                        <div class="item-media"><i class="icon icon-f7"></i></div>
+                        <div class="item-media"><i class="icon fa fa-paw"></i></div>
                         <div class="item-inner">
                           <div class="item-title">All Dogs</div>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="dogs-to-walk.html" class="item-link close-panel">
+                      <div class="item-content">
+                        <div class="item-media"><i class="icon icon-f7"></i></div>
+                        <div class="item-inner">
+                          <div class="item-title">Dogs to Walk</div>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="dogs-to-shower.html" class="item-link close-panel">
+                      <div class="item-content">
+                        <div class="item-media"><i class="icon icon-f7"></i></div>
+                        <div class="item-inner">
+                          <div class="item-title">Dogs to Shower</div>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="dogs-out-for-a-walk.html" class="item-link close-panel">
+                      <div class="item-content">
+                        <div class="item-media"><i class="icon icon-f7"></i></div>
+                        <div class="item-inner">
+                          <div class="item-title">Dogs out for a Walk</div>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="kennel-map.html" class="item-link close-panel">
+                      <div class="item-content">
+                        <div class="item-media"><i class="icon fa fa-map-marker"></i></div>
+                        <div class="item-inner">
+                          <div class="item-title">Kennel Map</div>
                         </div>
                       </div>
                     </a>
