--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <li>
                     <a href="index.html" class="item-link close-panel">
                       <div class="item-content">
-                        <div class="item-media"><i class="icon fa fa-home" style="-webkit-filter: hue-rotate(220deg) saturate(5);"></i></div>
+                        <div class="item-media"><i class="icon fa fa-home"></i></div>
                         <div class="item-inner">
                           <div class="item-title">Home</div>
                         </div>
