--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <li>
                     <a href="index.html" class="item-link close-panel">
                       <div class="item-content">
-                        <div class="item-media"><i class="icon fa fa-home"></i></div>
+                        <div class="item-media"><i class="fa fa-home"></i></div>
                         <div class="item-inner">
                           <div class="item-title">Home</div>
                         </div>
@@ -47,7 +47,7 @@
                   <li>
                     <a href="all-dogs.html" class="item-link close-panel">
                       <div class="item-content">
-                        <div class="item-media"><i class="icon fa fa-paw"></i></div>
+                        <div class="item-media"><i class="fa fa-paw"></i></div>
                         <div class="item-inner">
                           <div class="item-title">All Dogs</div>
                         </div>
@@ -87,7 +87,7 @@
                   <li>
                     <a href="kennel-map.html" class="item-link close-panel">
                       <div class="item-content">
-                        <div class="item-media"><i class="icon fa fa-map-marker"></i></div>
+                        <div class="item-media"><i class="fa fa-map-marker"></i></div>
                         <div class="item-inner">
                           <div class="item-title">Kennel Map</div>
                         </div>
