Renamed Dogs-out-for-walk.html to Dogs-out-for-a-walk.html

--- a/dogs-out-for-a-walk.html
+++ b/dogs-out-for-a-walk.html
@@ -1,4 +1,4 @@
-<div data-page="Dogs out for Walk" class="page">
+<div data-page="Dogs out for a Walk" class="page">
   <!-- search bar -->
   <form class="searchbar searchbar-init" data-search-list=".dogs-list" data-search-in=".item-title" data-found=".searchbar-found" data-not-found=".searchbar-not-found">
     <div class="searchbar-input">
@@ -15,7 +15,7 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="left"><a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a></div>
-      <div class="center">Dogs out for Walk</div>
+      <div class="center">Dogs out for a Walk</div>
       <div class="right">
         <a href="create-dog.html" class="link icon-only"> <i class="icon icon-plus"></i></a>
       </div>
