Added ongoing tasks on home

--- a/index.html
+++ b/index.html
@@ -79,16 +79,29 @@
 
             <!-- Scrollable page content -->
             <div class="page-content">
-              <div class="content-block-title">Logged-in user's current data goes here</div>
-              <div class="content-block">
-                <p>Current status:<br>
-                  Out for walk with Coco since 10:40
-                </p>
-              </div>
-              <div class="content-block-title">Overview data goes here</div>
-              <div class="content-block">
-                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-              </div>
+              <div class="card">
+				  <div class="card-header bg-green">Ongoing tasks</div>
+				  <div class="card-content">
+					<div class="card-content-inner">
+						Walking Coco 
+						<a href="#" class="button button-fill button-raised color-red ">End walk</a>
+					</div>
+				  </div>
+				</div>
+				<br>
+				<div class="card">
+				<div class="card-header bg-blue">CoCo</div>
+				<div class="card demo-card-header-pic">				
+				  <div style="background-image:url(http://i284.photobucket.com/albums/ll2/clement20/Dog_0013.jpg)" valign="bottom" class="card-header color-white no-border"></div>
+				  <div class="card-content">
+					<div class="card-content-inner">
+					  <p class="color-gray">Behaviour Notes</p>
+					  <p>Aggressive towards cyclists. Attacks other dogs.</p>
+					   <a href="#" class="button button-fill button-raised ">Read more</a>
+					</div>
+				  </div>
+				</div>
+				</div>
             </div>
           </div>
         </div>
