--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       <div class="item-content">
                         <div class="item-media"><i class="icon icon-f7"></i></div>
                         <div class="item-inner">
-                          <div class="item-title">Dogs to Walk</div>
+                          <div class="item-title">Dogs due for walk</div>
                         </div>
                       </div>
                     </a>
@@ -69,7 +69,7 @@
                       <div class="item-content">
                         <div class="item-media"><i class="icon icon-f7"></i></div>
                         <div class="item-inner">
-                          <div class="item-title">Dogs to Shower</div>
+                          <div class="item-title">Dogs due for shower</div>
                         </div>
                       </div>
                     </a>
@@ -79,7 +79,7 @@
                       <div class="item-content">
                         <div class="item-media"><i class="icon icon-f7"></i></div>
                         <div class="item-inner">
-                          <div class="item-title">Dogs out for a Walk</div>
+                          <div class="item-title">Dogs being walked</div>
                         </div>
                       </div>
                     </a>
