fix ongoing tasks card

--- a/index.html
+++ b/index.html
@@ -120,15 +120,14 @@
             <!-- Scrollable page content -->
             <div class="page-content">
               <div class="card">
-                <div class="card-header bg-green">Ongoing tasks</div>
+                <div class="card-header color-white bg-blue">Ongoing tasks</div>
                 <div class="card-content">
                   <div class="card-content-inner">
-                    Walking Coco
-                    <a href="#" class="button button-fill button-raised color-red ">End walk</a>
+                    <p>Walking Coco since 2.27pm (14 min ago)</p>
+                    <p><a href="#" class="button button-fill button-raised color-red">End walk</a></p>
                   </div>
                 </div>
               </div>
-              <br>
               <div class="card">
                 <div class="card-header bg-blue">CoCo</div>
                 <div class="card demo-card-header-pic">
