fix current dog card
- fix the card-inside-a-card effect, allow a second card header with image by refactoring into ".card .card-header.card-image-header" instead of "demo-card-header-pic .card-header"
- make the Behaviour Notes header black and bold

--- a/index.html
+++ b/index.html
@@ -129,15 +129,13 @@
                 </div>
               </div>
               <div class="card">
-                <div class="card-header bg-blue">CoCo</div>
-                <div class="card demo-card-header-pic">
-                  <div style="background-image:url(http://i284.photobucket.com/albums/ll2/clement20/Dog_0013.jpg)" valign="bottom" class="card-header color-white no-border"></div>
-                  <div class="card-content">
-                    <div class="card-content-inner">
-                      <p class="color-gray">Behaviour Notes</p>
-                      <p>Aggressive towards cyclists. Attacks other dogs.</p>
-                      <a href="#" class="button button-fill button-raised ">Read more</a>
-                    </div>
+                <div class="card-header color-white bg-blue">Coco</div>
+                <div style="background-image: url(http://i284.photobucket.com/albums/ll2/clement20/Dog_0013.jpg);" valign="bottom" class="card-header card-image-header color-white no-border"></div>
+                <div class="card-content">
+                  <div class="card-content-inner">
+                    <p><strong>Behaviour Notes</strong></p>
+                    <p>Aggressive towards cyclists. Attacks other dogs.</p>
+                    <a href="#" class="button button-fill button-raised ">View profile</a>
                   </div>
                 </div>
               </div>
