add link to "View profile"

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <div class="card-content-inner">
                     <p><strong>Behaviour Notes</strong></p>
                     <p>Aggressive towards cyclists. Attacks other dogs.</p>
-                    <a href="#" class="button button-fill button-raised ">View profile</a>
+                    <a href="dog.html" class="button button-fill button-raised ">View profile</a>
                   </div>
                 </div>
               </div>
