add timestamps to dog profile incident log cards

--- a/dog.html
+++ b/dog.html
@@ -64,7 +64,7 @@
           Attacked a passer-by, who got scratched quite badly. Be careful!
         </div>
       </div>
-      <div class="card-footer">Kristine posted on 18 Jul 2015</div>
+      <div class="card-footer">Kristine posted on 18 Jul 2015 1:50pm</div>
     </div>
     <div class="card">
       <div class="card-content">
@@ -72,7 +72,7 @@
           Suddenly jumped out at a passing cyclist, causing him to swerve and nearly fall! Short leash and keep her away from cyclists.
         </div>
       </div>
-      <div class="card-footer">Alex posted on 7 May 2015</div>
+      <div class="card-footer">Alex posted on 7 May 2015 2:47pm</div>
     </div>
     <div class="card">
       <!-- TODO: handle create all-incidents list page -->
