change out all subtitle/text of dog lists

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -39,8 +39,7 @@
                   <div class="item-title">Candy</div>
                   <div class="item-after"><span class="badge bg-indigo">S</span></div>
                 </div>
-                <div class="item-subtitle">Subtitle</div>
-                <div class="item-text">From the Academy Award winning director of A SEPARATION comes this gripping mystery set among a group of old friends</div>
+                <div class="item-subtitle">Kennel 42</div>
               </div>
             </div>
           </a>
@@ -54,8 +53,7 @@
                   <div class="item-title">Coco</div>
                   <div class="item-after"><span class="badge bg-indigo">S</span>&nbsp;<span class="badge bg-brown">W</span></div>
                 </div>
-                <div class="item-subtitle">Subtitle</div>
-                <div class="item-text">Monrovia, 1990: An aggressive civil war has escalated, threatening many lives, including a group of native Liberian missionaries</div>
+                <div class="item-subtitle">Kennel 7</div>
               </div>
             </div>
           </a>
@@ -70,8 +68,7 @@
                   <div class="item-title">Dee Dee</div>
                   <div class="item-after"><span class="badge bg-brown">W</span></div>
                 </div>
-                <div class="item-subtitle">Subtitle</div>
-                <div class="item-text">Based on the bestselling novel by master storyteller Nicholas Sparks, THE LONGEST RIDE centers on the star-crossed love affair between</div>
+                <div class="item-subtitle">Kennel 23</div>
               </div>
             </div>
           </a>
@@ -84,8 +81,7 @@
                 <div class="item-title-row">
                   <div class="item-title">Donkey</div>
                 </div>
-                <div class="item-subtitle">Subtitle</div>
-                <div class="item-text">Based on the bestselling novel by master storyteller Nicholas Sparks, THE LONGEST RIDE centers on the star-crossed love affair between</div>
+                <div class="item-subtitle">Kennel 11</div>
               </div>
             </div>
           </a>
