--- a/dogs-to-walk.html
+++ b/dogs-to-walk.html
@@ -31,21 +31,6 @@
       <ul class="dogs-list">
         <li class="list-group-title">C</li>
         <li>
-          <a href="#" class="item-link"><!-- dog.html?id={{id}} -->
-            <div class="item-content">
-              <div class="item-media"><img src="http://placehold.it/48x48"></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Coco</div>
-                  <div class="item-after"><span class="badge bg-indigo">S</span></div>
-                </div>
-                <div class="item-subtitle">Subtitle</div>
-                <div class="item-text">From the Academy Award winning director of A SEPARATION comes this gripping mystery set among a group of old friends</div>
-              </div>
-            </div>
-          </a>
-        </li>
-        <li>
           <a href="dog.html" class="item-link"><!-- dog.html?id={{id}} -->
             <div class="item-content">
               <div class="item-media"><img src="http://placehold.it/48x48"></div>
@@ -54,8 +39,7 @@
                   <div class="item-title">Lego</div>
                   <div class="item-after"><span class="badge bg-indigo">S</span>&nbsp;<span class="badge bg-brown">W</span></div>
                 </div>
-                <div class="item-subtitle">Subtitle</div>
-                <div class="item-text">Monrovia, 1990: An aggressive civil war has escalated, threatening many lives, including a group of native Liberian missionaries</div>
+                <div class="item-subtitle">Last walked 4 Aug (1 day ago)</div>
               </div>
             </div>
           </a>
@@ -70,22 +54,7 @@
                   <div class="item-title">Ginger</div>
                   <div class="item-after"><span class="badge bg-brown">W</span></div>
                 </div>
-                <div class="item-subtitle">Subtitle</div>
-                <div class="item-text">Based on the bestselling novel by master storyteller Nicholas Sparks, THE LONGEST RIDE centers on the star-crossed love affair between</div>
-              </div>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="item-link"><!-- dog.html?id={{id}} -->
-            <div class="item-content">
-              <div class="item-media"><img src="http://placehold.it/48x48"></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Mimi</div>
-                </div>
-                <div class="item-subtitle">Subtitle</div>
-                <div class="item-text">Based on the bestselling novel by master storyteller Nicholas Sparks, THE LONGEST RIDE centers on the star-crossed love affair between</div>
+                <div class="item-subtitle">Last walked 3 Aug (2 days ago)</div>
               </div>
             </div>
           </a>
