--- a/dogs-to-shower.html
+++ b/dogs-to-shower.html
@@ -15,7 +15,7 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="left"><a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a></div>
-      <div class="center">Dogs To Shower</div>
+      <div class="center">Dogs due for a shower</div>
       <div class="right">
         <a href="create-dog.html" class="link icon-only"> <i class="icon icon-plus"></i></a>
       </div>
