--- a/dogs-being-walked.html
+++ b/dogs-being-walked.html
@@ -1,4 +1,4 @@
-<div data-page="Dogs To Shower" class="page">
+<div data-page="Dogs being walked" class="page">
   <!-- search bar -->
   <form class="searchbar searchbar-init" data-search-list=".dogs-list" data-search-in=".item-title" data-found=".searchbar-found" data-not-found=".searchbar-not-found">
     <div class="searchbar-input">
@@ -15,7 +15,7 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="left"><a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a></div>
-      <div class="center">Dogs due for a shower</div>
+      <div class="center">Dogs being walked</div>
       <div class="right">
         <a href="create-dog.html" class="link icon-only"> <i class="icon icon-plus"></i></a>
       </div>
@@ -35,24 +35,10 @@
               <div class="item-media"><img src="http://placehold.it/48x48"></div>
               <div class="item-inner">
                 <div class="item-title-row">
-                  <div class="item-title">Lucky</div>
-                  <div class="item-after"><span class="badge bg-indigo">S</span></div>
+                  <div class="item-title">Coco</div>
+                  <div class="item-after"><span class="badge bg-brown">W</span></div>
                 </div>
-                <div class="item-subtitle">Last showered 24 Jul (8 days ago)</div>
-              </div>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="dog.html" class="item-link"><!-- dog.html?id={{id}} -->
-            <div class="item-content">
-              <div class="item-media"><img src="http://placehold.it/48x48"></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Mentos</div>
-                  <div class="item-after"><span class="badge bg-indigo">S</span>&nbsp;<span class="badge bg-brown">W</span></div>
-                </div>
-                <div class="item-subtitle">Last showered 23 Jul (9 days ago)</div>
+                <div class="item-subtitle">Out since 1:47pm (40 min ago)</div>
               </div>
             </div>
           </a>
