--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="dogs-to-walk.html" class="item-link close-panel">
+                    <a href="dogs-due-for-walk.html" class="item-link close-panel">
                       <div class="item-content">
                         <div class="item-media"><img src="img/walking.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
@@ -65,7 +65,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="dogs-to-shower.html" class="item-link close-panel">
+                    <a href="dogs-due-for-shower.html" class="item-link close-panel">
                       <div class="item-content">
                         <div class="item-media"><img src="img/shower.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
@@ -75,7 +75,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="dogs-out-for-a-walk.html" class="item-link close-panel">
+                    <a href="dogs-being-walked.html" class="item-link close-panel">
                       <div class="item-content">
                         <div class="item-media"><img src="img/dog68.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
