--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       <div class="item-content">
                         <div class="item-media"><img src="img/walking.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
-                          <div class="item-title">Dogs due for walk</div>
+                          <div class="item-title">Walk me</div>
                         </div>
                       </div>
                     </a>
@@ -69,7 +69,7 @@
                       <div class="item-content">
                         <div class="item-media"><img src="img/shower.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
-                          <div class="item-title">Dogs due for shower</div>
+                          <div class="item-title">Shower me</div>
                         </div>
                       </div>
                     </a>
@@ -79,7 +79,7 @@
                       <div class="item-content">
                         <div class="item-media"><img src="img/dog68.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
-                          <div class="item-title">Dogs being walked</div>
+                          <div class="item-title">I'm walking</div>
                         </div>
                       </div>
                     </a>
