rename "I'm walking" to "Walking now"

--- a/dogs-being-walked.html
+++ b/dogs-being-walked.html
@@ -15,7 +15,7 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="left"><a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a></div>
-      <div class="center">I'm walking</div>
+      <div class="center">Walking now</div>
       <div class="right">
         <a href="create-dog.html" class="link icon-only"> <i class="icon icon-plus"></i></a>
       </div>
