--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                       <div class="item-content">
                         <div class="item-media"><img src="img/dog68.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
-                          <div class="item-title">I'm walking</div>
+                          <div class="item-title">Walking now</div>
                         </div>
                       </div>
                     </a>
