change color for shower and walk badge on list view

--- a/dogs-due-for-shower.html
+++ b/dogs-due-for-shower.html
@@ -50,7 +50,7 @@
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">Mentos</div>
-                  <div class="item-after"><span class="badge bg-indigo">S</span>&nbsp;<span class="badge bg-brown">W</span></div>
+                  <div class="item-after"><span class="badge bg-indigo">S</span>&nbsp;<span class="badge bg-teal">W</span></div>
                 </div>
                 <div class="item-subtitle">Last showered 23 Jul (9 days ago)</div>
               </div>
