--- a/dogs-due-for-walk.html
+++ b/dogs-due-for-walk.html
@@ -36,7 +36,7 @@
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">Lego</div>
-                  <div class="item-after"><span class="badge bg-indigo">S</span>&nbsp;<span class="badge bg-brown">W</span></div>
+                  <div class="item-after"><span class="badge bg-indigo">S</span>&nbsp;<span class="badge bg-teal">W</span></div>
                 </div>
                 <div class="item-subtitle">Last walked 4 Aug (1 day ago)</div>
               </div>
@@ -50,7 +50,7 @@
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">Ginger</div>
-                  <div class="item-after"><span class="badge bg-brown">W</span></div>
+                  <div class="item-after"><span class="badge bg-teal">W</span></div>
                 </div>
                 <div class="item-subtitle">Last walked 3 Aug (2 days ago)</div>
               </div>
