--- a/all-dogs.html
+++ b/all-dogs.html
@@ -51,7 +51,7 @@
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">Coco</div>
-                  <div class="item-after"><span class="badge bg-indigo">S</span>&nbsp;<span class="badge bg-brown">W</span></div>
+                  <div class="item-after"><span class="badge bg-indigo">S</span>&nbsp;<span class="badge bg-teal">W</span></div>
                 </div>
                 <div class="item-subtitle">Kennel 7</div>
               </div>
@@ -66,7 +66,7 @@
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">Dee Dee</div>
-                  <div class="item-after"><span class="badge bg-brown">W</span></div>
+                  <div class="item-after"><span class="badge bg-teal">W</span></div>
                 </div>
                 <div class="item-subtitle">Kennel 23</div>
               </div>
