--- a/dogs-being-walked.html
+++ b/dogs-being-walked.html
@@ -36,7 +36,7 @@
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">Coco</div>
-                  <div class="item-after"><span class="badge bg-brown">W</span></div>
+                  <div class="item-after"><span class="badge bg-teal">W</span></div>
                 </div>
                 <div class="item-subtitle">Out since 1:47pm (40 min ago)</div>
               </div>
