--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/my-app.css">
+    <link rel="stylesheet" href="css/leaflet.css" />
   </head>
   <body>
     <!-- Panel overlay to overlay app while panel is opened -->
@@ -155,6 +156,7 @@
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="js/framework7.js"></script>
     <!-- Path to your app js-->
+    <script src="js/leaflet.js"></script>
     <script type="text/javascript" src="js/my-app.js"></script>
   </body>
 </html>
