--- a/walk-me.html
+++ b/walk-me.html
@@ -1,4 +1,4 @@
-<div data-page="Dogs due for shower" class="page">
+<div data-page="walkme" class="page">
   <!-- search bar -->
   <form class="searchbar searchbar-init" data-search-list=".dogs-list" data-search-in=".item-title" data-found=".searchbar-found" data-not-found=".searchbar-not-found">
     <div class="searchbar-input">
@@ -15,7 +15,7 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="left"><a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a></div>
-      <div class="center">Shower me</div>
+      <div class="center">Walk me</div>
       <div class="right">
         <a href="create-dog.html" class="link icon-only"> <i class="icon icon-plus"></i></a>
       </div>
@@ -30,27 +30,27 @@
     <div class="list-block media-list list-block-search searchbar-found" style="margin-top: 0;">
       <ul class="dogs-list">
         <li>
-          <a href="#" class="item-link"><!-- dog.html?id={{id}} -->
-            <div class="item-content">
-              <div class="item-media"><img src="http://placehold.it/48x48"></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Lucky</div>
-                </div>
-                <div class="item-subtitle">Last showered 24 Jul (8 days ago)</div>
-              </div>
-            </div>
-          </a>
-        </li>
-        <li>
           <a href="dog.html" class="item-link"><!-- dog.html?id={{id}} -->
             <div class="item-content">
               <div class="item-media"><img src="http://placehold.it/48x48"></div>
               <div class="item-inner">
                 <div class="item-title-row">
-                  <div class="item-title">Mentos</div>
+                  <div class="item-title">Lego</div>
                 </div>
-                <div class="item-subtitle">Last showered 23 Jul (9 days ago)</div>
+                <div class="item-subtitle">Last walked 4 Aug (1 day ago)</div>
+              </div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="item-link"><!-- dog.html?id={{id}} -->
+            <div class="item-content">
+              <div class="item-media"><img src="http://placehold.it/48x48"></div>
+              <div class="item-inner">
+                <div class="item-title-row">
+                  <div class="item-title">Ginger</div>
+                </div>
+                <div class="item-subtitle">Last walked 3 Aug (2 days ago)</div>
               </div>
             </div>
           </a>
