--- a/walking-now.html
+++ b/walking-now.html
@@ -1,4 +1,4 @@
-<div data-page="Dogs being walked" class="page">
+<div data-page="walkingnow" class="page">
   <!-- search bar -->
   <form class="searchbar searchbar-init" data-search-list=".dogs-list" data-search-in=".item-title" data-found=".searchbar-found" data-not-found=".searchbar-not-found">
     <div class="searchbar-input">
