--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="dogs-being-walked.html" class="item-link close-panel">
+                    <a href="walking-now.html" class="item-link close-panel">
                       <div class="item-content">
                         <div class="item-media"><img src="img/dog68.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
@@ -156,5 +156,9 @@
     <script type="text/javascript" src="js/framework7.js"></script>
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/my-app.js"></script>
+    <!-- Path to KnockoutJS data-binding framework -->
+    <script type="text/javascript" src="js/knockout-3.3.0.js"></script>
+    <!-- Path to dog data -->
+    <script type="text/javascript" src="js/dog.js"></script>
   </body>
 </html>
