--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@
     </div>
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="js/framework7.js"></script>
-    <!-- Path to your app js-->
+    <!-- Path to your leaflet js-->
     <script src="js/leaflet.js"></script>
-    <script type="text/javascript" src="js/my-app.js"></script>
     <!-- Path to KnockoutJS data-binding framework -->
     <script type="text/javascript" src="js/knockout-3.3.0.js"></script>
     <!-- Path to dog data -->
-    <script type="text/javascript" src="js/dog.js"></script>
+    <script type="text/javascript" src="js/dogs.js"></script>
+    <!-- Path to your app js-->
+    <script type="text/javascript" src="js/my-app.js"></script>
   </body>
 </html>
