--- a/dog.html
+++ b/dog.html
@@ -3,7 +3,7 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="left"><a href="#" class="link back icon-only"><i class="icon icon-back"></i></a></div>
-      <div class="center">Coco</div>
+      <div class="center"><span data-bind="text: activeDog.name"></span></div>
       <div class="right">
         <a href="edit-dog.html" class="link icon-only"><i class="fa fa-pencil-square-o"></i></a>
       </div>
