Adds KO observable to dog walk state. Status now updates when button is clicked, however walk state button text toggle logic still does not work. Removes implementation in the meantime.

--- a/dog.html
+++ b/dog.html
@@ -28,7 +28,7 @@
           <strong>Walked today?</strong>
         </div>
         <div class="col-30" style="line-height: 36px; text-align: center;">
-          <span data-bind="text: activeDog.walked ? 'Yes' : 'No'">No</span>
+          <span data-bind="text: activeDog.walked">No</span>
         </div>
         <div class="col-30">
           <a href="#" class="button button-raised button-fill color-teal" style="text-transform: none" data-bind="click: walkDog"><span data-bind="text: walkStatus"></span></a>
