--- a/create-dog.html
+++ b/create-dog.html
@@ -17,7 +17,7 @@
             <div class="item-inner">
               <div class="item-title label">Name</div>
               <div class="item-input">
-                <input type="text" placeholder="Name">
+                <input type="text" placeholder="Name" data-bind="value: createDogName">
               </div>
             </div>
           </div>
@@ -27,10 +27,7 @@
             <div class="item-inner">
               <div class="item-title label">Gender</div>
               <div class="item-input">
-                <select>
-                  <option>Male</option>
-                  <option>Female</option>
-                </select>
+                <select data-bind="options: availableGenders, selectedOptions: createDogGender"></select>
               </div>
             </div>
           </div>
@@ -40,7 +37,7 @@
             <div class="item-inner">
               <div class="item-title label">Behaviour Notes</div>
               <div class="item-input">
-                <textarea placeholder="Behaviour Notes"></textarea>
+                <textarea placeholder="Behaviour Notes" data-bind="textInput: createDogBehaviour"></textarea>
               </div>
             </div>
           </div>
@@ -50,14 +47,14 @@
             <div class="item-inner">
               <div class="item-title label">Medical Notes</div>
               <div class="item-input">
-                <textarea placeholder="Medical Notes"></textarea>
+                <textarea placeholder="Medical Notes" data-bind="textInput: createDogMedical"></textarea>
               </div>
             </div>
           </div>
         </li>
         <!--TODO: Photo Browser goes here -->
         <li>
-          <input type="submit" class="button button-raised button-fill" value="Save" style="border: 0;">
+          <a href="dog.html" class="button button-raised button-fill" style="border: 0;" data-bind="click: addDog">Save</a>
         </li>
       </ul>
     </div>
