Adds functions for editing and adding new dogs to dog ViewModel. Implements logic for 'Walk Dog' toggle. Inserts data-binding for dog.html; the dog profile is now completely dynamic (with the exception of the picture slider).

--- a/dog.html
+++ b/dog.html
@@ -31,7 +31,7 @@
           <span data-bind="text: activeDog.walked">No</span>
         </div>
         <div class="col-30">
-          <a href="#" class="button button-raised button-fill color-teal" style="text-transform: none" data-bind="click: walkDog"><span data-bind="text: walkStatus"></span></a>
+          <a href="#" class="button button-raised button-fill color-teal" style="text-transform: none" data-bind="click: walkButton"><span data-bind="text: walkStatus"></span></a>
         </div>
       </div>
       <div class="row">
@@ -42,7 +42,7 @@
           <span data-bind="text: activeDog.showered"></span><br><span class="color-gray">44 days ago</span>
         </div>
         <div class="col-30">
-          <a href="#" class="button button-raised button-fill color-indigo" style="text-transform: none">Shower</a>
+          <a href="#" class="button button-raised button-fill color-indigo" style="text-transform: none" data-bind="click: showerDog">Shower</a>
         </div>
       </div>
     </div>
