--- a/all-dogs.html
+++ b/all-dogs.html
@@ -37,7 +37,8 @@
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title"><span data-bind="text: name"></span></div>
-                  <div class="item-after"><span class="badge bg-indigo">S</span></div>
+                  <div class="item-after"><span class="badge bg-indigo" data-bind="visible: $parent.showerBadge($data)">S</span></div>
+                  <div class="item-after"><span class="badge bg-teal" data-bind="visible: $parent.walkBadge($data)">W</span></div>
                 </div>
                 <div class="item-subtitle">Kennel <span data-bind="text: kennel"></span></div>
               </div>
