--- a/dog.html
+++ b/dog.html
@@ -2,7 +2,8 @@
   <!-- Top Navbar-->
   <div class="navbar">
     <div class="navbar-inner">
-      <div class="left"><a href="all-dogs.html" class="link icon-only"><i class="icon icon-back"></i></a></div>
+      <div class="left" data-bind="ifnot: justAddedDog"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
+      <div class="left" data-bind="if: justAddedDog"><a href="all-dogs.html" class="link icon-only" data-bind="click: resetButton"><i class="icon icon-back"></i></a></div>
       <div class="center"><span data-bind="text: activeDog.name"></span></div>
       <div class="right">
         <a href="edit-dog.html" class="link icon-only"><i class="fa fa-pencil-square-o"></i></a>
