--- a/shower-me.html
+++ b/shower-me.html
@@ -28,29 +28,16 @@
       Nothing found!
     </div>
     <div class="list-block media-list list-block-search searchbar-found" style="margin-top: 0;">
-      <ul class="dogs-list">
-        <li>
-          <a href="#" class="item-link"><!-- dog.html?id={{id}} -->
+      <ul class="dogs-list" data-bind="foreach: dog">
+        <li data-bind="if: $parent.showerBadge($data)">
+          <a href="dog.html" class="item-link" data-bind="click: $parent.retrieveDog"><!-- dog.html?id={{id}} -->
             <div class="item-content">
               <div class="item-media"><img src="http://placehold.it/48x48"></div>
               <div class="item-inner">
                 <div class="item-title-row">
-                  <div class="item-title">Lucky</div>
+                  <div class="item-title"><span data-bind="text: name"></span></div>
                 </div>
                 <div class="item-subtitle">Last showered 24 Jul (8 days ago)</div>
-              </div>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="dog.html" class="item-link"><!-- dog.html?id={{id}} -->
-            <div class="item-content">
-              <div class="item-media"><img src="http://placehold.it/48x48"></div>
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">Mentos</div>
-                </div>
-                <div class="item-subtitle">Last showered 23 Jul (9 days ago)</div>
               </div>
             </div>
           </a>
