--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
     <!-- Path to KnockoutJS data-binding framework -->
     <script type="text/javascript" src="js/knockout-3.3.0.js"></script>
     <!-- Path to dog data -->
+    <script type="text/javascript" src="js/data.js"></script>
+    <!-- Path to dog viewmodel -->
     <script type="text/javascript" src="js/dogs.js"></script>
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/my-app.js"></script>
