cleanup index.html js includes

--- a/index.html
+++ b/index.html
@@ -153,17 +153,12 @@
         </div>
       </div>
     </div>
-    <!-- Path to Framework7 Library JS-->
+    <!-- libraries -->
     <script type="text/javascript" src="js/framework7.js"></script>
-    <!-- Path to your leaflet js-->
-    <script src="js/leaflet.js"></script>
-    <!-- Path to KnockoutJS data-binding framework -->
+    <script type="text/javascript" src="js/leaflet.js"></script>
     <script type="text/javascript" src="js/knockout-3.3.0.js"></script>
-    <!-- Path to dog data -->
-    <script type="text/javascript" src="js/data.js"></script>
-    <!-- Path to dog viewmodel -->
-    <script type="text/javascript" src="js/dogs.js"></script>
-    <!-- Path to your app js-->
-    <script type="text/javascript" src="js/my-app.js"></script>
+    <script type="text/javascript" src="js/my-app.js"></script><!-- app js for framework7 -->
+    <script type="text/javascript" src="js/data.js"></script><!-- dog data -->
+    <script type="text/javascript" src="js/dogs.js"></script><!-- dog viewmodel -->
   </body>
 </html>
