--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
     <script type="text/javascript" src="js/framework7.js"></script>
     <script type="text/javascript" src="js/leaflet.js"></script>
     <script type="text/javascript" src="js/knockout-3.3.0.js"></script>
+    <script type="text/javascript" src="js/moment.js"></script>
     <script type="text/javascript" src="js/my-app.js"></script><!-- app js for framework7 -->
     <script type="text/javascript" src="js/data.js"></script><!-- dog data -->
     <script type="text/javascript" src="js/dogs.js"></script><!-- dog viewmodel -->
