--- a/dog.html
+++ b/dog.html
@@ -67,7 +67,7 @@
             <span data-bind="text: log"></span>
           </div>
         </div>
-        <div class="card-footer"><span data-bind="text: submitter"></span> posted on <span data-bind="text: date"></span></div>
+        <div class="card-footer"><span data-bind="text: submitter"></span> posted on <span data-bind="text: moment(date).calendar()"></span></div>
       </div>
     </div>
     <div class="card">
