--- a/all-dogs.html
+++ b/all-dogs.html
@@ -29,9 +29,8 @@
     </div>
     <div class="list-block media-list list-block-search searchbar-found" style="margin-top: 0;">
       <ul class="dogs-list" data-bind="foreach: dog">
-
         <li>
-          <a href="dog.html" class="item-link" data-bind="click: $parent.retrieveDog"><!-- dog.html?id={{id}} -->
+          <a href="dog.html" class="item-link" data-bind="click: $parent.retrieveDog">
             <div class="item-content">
               <div class="item-media"><img src="http://placehold.it/48x48"></div>
               <div class="item-inner">
@@ -47,7 +46,6 @@
             </div>
           </a>
         </li>
-
     </div>
   </div>
 </div>
