--- a/walking-now.html
+++ b/walking-now.html
@@ -30,14 +30,14 @@
     <div class="list-block media-list list-block-search searchbar-found" style="margin-top: 0;">
       <ul class="dogs-list">
         <li>
-          <a href="#" class="item-link"><!-- dog.html?id={{id}} -->
+          <a href="#" class="item-link">
             <div class="item-content">
               <div class="item-media"><img src="http://placehold.it/48x48"></div>
               <div class="item-inner">
                 <div class="item-title-row">
-                  <div class="item-title">Coco</div>
+                  <div class="item-title"></div>
                 </div>
-                <div class="item-subtitle">Out since 1:47pm (40 min ago)</div>
+                <div class="item-subtitle"></div>
               </div>
             </div>
           </a>
