--- a/walking-now.html
+++ b/walking-now.html
@@ -28,16 +28,16 @@
       Nothing found!
     </div>
     <div class="list-block media-list list-block-search searchbar-found" style="margin-top: 0;">
-      <ul class="dogs-list">
-        <li>
-          <a href="#" class="item-link">
+      <ul class="dogs-list" data-bind="foreach: dog">
+        <li data-bind="if: $parent.isWalking($data)">
+          <a href="dog.html" class="item-link" data-bind="click: $parent.retrieveDog">
             <div class="item-content">
               <div class="item-media"><img src="http://placehold.it/48x48"></div>
               <div class="item-inner">
                 <div class="item-title-row">
-                  <div class="item-title"></div>
+                  <div class="item-title"><span data-bind="text: name"></span></div>
                 </div>
-                <div class="item-subtitle"></div>
+                <div class="item-subtitle">Out since x:yypm (zz min ago)</div>
               </div>
             </div>
           </a>
