--- a/shower-me.html
+++ b/shower-me.html
@@ -37,7 +37,7 @@
                 <div class="item-title-row">
                   <div class="item-title"><span data-bind="text: name"></span></div>
                 </div>
-                <div class="item-subtitle"><span data-bind="text: 'Last showered ' + $parent.showerRelativeDate($data)"></span></div>
+                <div class="item-subtitle"><span data-bind="text: 'Last showered ' + $parent.daysAgoFromNow($data.showered())"></span></div>
               </div>
             </div>
           </a>
