--- a/dog.html
+++ b/dog.html
@@ -60,7 +60,7 @@
     </div>
     <!-- Incident logs -->
     <div class="content-block-title color-black"><strong>Incident Log</strong></div>
-    <div data-bind="foreach: activeDog.incident">
+    <div data-bind="foreach: activeDog.incident.slice(0, 2)">
       <div class="card">
         <div class="card-content">
           <div class="card-content-inner">
@@ -70,8 +70,7 @@
         <div class="card-footer"><span data-bind="text: submitter"></span> posted on <span data-bind="text: moment(date).calendar()"></span></div>
       </div>
     </div>
-    <div class="card" data-bind="if: activeDog.incident.length > 0">
-      <!-- TODO: handle create all-incidents list page -->
+    <div class="card" data-bind="if: activeDog.incident.length > 2">
       <div class="card-footer"><a href="#">View more incidents...</a></div>
     </div>
     <div class="card" data-bind="if: activeDog.incident.length == 0">
