Add dog-incidents view to see full incident logs

--- a/dog.html
+++ b/dog.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="card" data-bind="if: activeDog.incident.length > 2">
-      <div class="card-footer"><a href="#">View more incidents...</a></div>
+      <div class="card-footer"><a href="dog-incidents.html">View more incidents...</a></div>
     </div>
     <div class="card" data-bind="if: activeDog.incident.length == 0">
       <div class="card-footer">
