--- a/dog-incidents.html
+++ b/dog-incidents.html
@@ -11,7 +11,7 @@
   <div class="page-content">
     <!-- Incident logs -->
     <div class="content-block-title color-black"><strong>Incident Log</strong></div>
-    <div data-bind="foreach: activeDog.incident">
+    <div data-bind="foreach: activeDog.incident()">
       <div class="card">
         <div class="card-content">
           <div class="card-content-inner">
@@ -21,7 +21,7 @@
         <div class="card-footer"><span data-bind="text: submitter"></span>&nbsp;posted on&nbsp;<span data-bind="text: moment(date).calendar()"></span></div>
       </div>
     </div>
-    <div class="card" data-bind="if: activeDog.incident.length == 0">
+    <div class="card" data-bind="if: activeDog.incident().length == 0">
       <div class="card-footer">
         <p>None yet!</p>
       </div>
