--- a/dog.html
+++ b/dog.html
@@ -60,7 +60,7 @@
     </div>
     <!-- Incident logs -->
     <div class="content-block-title color-black"><strong>Incident Log</strong></div>
-    <div data-bind="foreach: activeDog.incident.slice(0, 2)">
+    <div data-bind="foreach: activeDog.incident().slice(0, 2)">
       <div class="card">
         <div class="card-content">
           <div class="card-content-inner">
@@ -70,14 +70,30 @@
         <div class="card-footer"><span data-bind="text: submitter"></span> posted on <span data-bind="text: moment(date).calendar()"></span></div>
       </div>
     </div>
-    <div class="card" data-bind="if: activeDog.incident.length > 2">
+    <div class="card" data-bind="if: activeDog.incident().length > 2">
       <div class="card-footer"><a href="dog-incidents.html">View more incidents...</a></div>
     </div>
-    <div class="card" data-bind="if: activeDog.incident.length == 0">
+    <div class="card" data-bind="if: activeDog.incident().length == 0">
       <div class="card-footer">
         <p>None yet!</p>
       </div>
     </div>
-    <!-- TODO: add form to for create new incident log -->
+    <div class="content-block-title color-black"><strong>Add Incident Log</strong></div>
+    <div class="list-block card">
+    <ul>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-input">
+              <textarea placeholder="Incident Log message" data-bind="textInput: createIncidentLog"></textarea>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <a href="#" class="button button-raised button-fill" style="border: 0;" data-bind="click: addIncident">Save</a>
+      </li>
+    </ul>
+    </div>
   </div>
 </div>
